@@ -3,6 +3,6 @@ export const selectors = {
   markdownRoot: '[data-markdown-root]',
 };
 
-export const taskPrefixRegex = /^(\s*)(-[ \t]+\[[xX\s]?\])/g;
+export const taskPrefixRegex = /^(\s*)(-[ \t]+\[[xX\s]?\])/gm;
 
 export const taskRegex = /^(\s*)(-[ \t]+\[[xX\s]?\])(.+)/gm;
